// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cjs circular dependencies 1`] = `
Array [
  Array [
    "module1:",
    "from entry",
  ],
  Array [
    "main:",
    "from module1",
  ],
]
`;

exports[`cjs circular dependencies 2`] = `
Array [
  Array [
    "main:",
    Object {},
  ],
  Array [
    "module1:",
    "from entry",
  ],
]
`;

exports[`cjs filename 1`] = `
Array [
  Array [
    "entry",
  ],
  Array [
    "module1",
  ],
  Array [
    "module2",
  ],
  Array [
    "index",
  ],
]
`;

exports[`cjs nested 1`] = `
Array [
  Array [
    "module1",
  ],
  Array [
    "module1-sub",
  ],
  Array [
    "entry",
  ],
]
`;

exports[`cjs node_modules 1`] = `
Array [
  Array [
    "16.13.1",
  ],
]
`;

exports[`cjs simple 1`] = `
Array [
  Array [
    "entry",
  ],
  Array [
    "module1",
  ],
  Array [
    "module2: value",
  ],
  Array [
    "module2: fn",
  ],
  Array [
    "module3",
    "from module1.js",
  ],
  Array [
    "sep----",
  ],
  Array [
    "module3",
    "from entry.js",
  ],
]
`;

exports[`esm esm 1`] = `
Array [
  Array [
    "1. default: named",
    "named: module2Value",
  ],
  Array [
    "2. default: arguments",
    "from entry-point",
  ],
  Array [
    "3. default: anonymous",
    "from module1 from entry-point",
  ],
  Array [
    "4. named: func",
  ],
  Array [
    6,
  ],
  Array [
    "5. module3 value",
  ],
  Array [
    "5. module3 value",
  ],
]
`;

exports[`esm esm-node_modules 1`] = `
Array [
  Array [
    "16.13.1",
  ],
]
`;

exports[`esm esm-simple 1`] = `
Array [
  Array [
    20,
  ],
]
`;
